--- a/src/main/resources/view/ManageStudent.fxml
+++ b/src/main/resources/view/ManageStudent.fxml
@@ -57,7 +57,7 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
-            <TextField layoutX="237.0" layoutY="132.0" prefHeight="40.0" prefWidth="187.0" style="-fx-background-radius: 20px;" />
+            <TextField fx:id="txtContactNo" layoutX="237.0" layoutY="132.0" prefHeight="40.0" prefWidth="187.0" style="-fx-background-radius: 20px;" />
             <TextField fx:id="txtStudentAddress" layoutX="244.0" layoutY="42.0" prefHeight="40.0" prefWidth="187.0" style="-fx-background-radius: 20px;" />
             <TextField fx:id="txtStudentName" layoutX="19.0" layoutY="132.0" prefHeight="40.0" prefWidth="187.0" style="-fx-background-radius: 20px;" />
             <RadioButton fx:id="radiobtnMale" layoutX="465.0" layoutY="137.0" mnemonicParsing="false" text="Male" />
@@ -65,7 +65,7 @@
             <Button fx:id="btnAdd" layoutX="734.0" layoutY="46.0" mnemonicParsing="false" onAction="#btnAddOnAction" prefHeight="40.0" prefWidth="111.0" style="-fx-background-color: #d1d8e0;" text="Add" />
             <Button fx:id="btnUpdate" layoutX="734.0" layoutY="94.0" mnemonicParsing="false" onAction="#btnUpdateOnAction" prefHeight="40.0" prefWidth="111.0" style="-fx-background-color: #d1d8e0;" text="Update" />
             <Button fx:id="btnDelete" layoutX="734.0" layoutY="140.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="40.0" prefWidth="111.0" style="-fx-background-color: #d1d8e0;" text="Delete" />
-            <DatePicker fx:id="txtContactNo" layoutX="470.0" layoutY="47.0" />
+            <DatePicker fx:id="cmbDob" layoutX="470.0" layoutY="47.0" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="27.0" layoutY="297.0" prefHeight="289.0" prefWidth="880.0" style="-fx-background-radius: 20px; -fx-background-color: #d1d8e0;">
